# misis2024f-24-03-subbotin-r-v

./: .gitignore  CMakeLists.txt  codeforces.id  prj.codeforces697a.cpp  status.md
prj.codeforces/: 0004a.cpp  0217a.cpp  0263a.cpp  0276a.cpp  0339b.cpp  0617a.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512c.cpp  1521a.cpp  1670b.cpp  1671a.cpp  1701a.cpp  1717b.cpp  1721b.cpp  1872a.cpp  1873c.cpp  1873d.cpp  2004a.cpp  2005a.cpp  2005b.cpp  2010a.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: arrayd.cpp  arrayd.hpp
prj.lab/arrayt/: arrayt.cpp  arrayt.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/matrix/: matrix.cpp
prj.lab/matrixa/: CMakeLists.txt  matrixa.cpp  matrixa.hpp
prj.lab/queuea/: queuea.cpp  queuea.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackl/: stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayt_doctest.cpp  complex_doctest.cpp  complex_test.cpp  matrixa_doctest.cpp  matrixa_test.cpp  queuea_doctest.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
