set(CMAKE_CXX_STANDARD 13)

add_executable(0004a 0004a.cpp)
add_executable(0217a 0217a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1521a 1512a.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)
add_executable(2004a 2004a.cpp)
add_executable(2005a 2005a.cpp)
add_executable(2005b 2005b.cpp)
add_executable(2010a 2010a.cpp)
add_executable(1671a 1671a.cpp)
add_executable(1701a 1701a.cpp)